--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
 <head>
-<title>我的首頁</title>
+<title>許辰俞11229</title>
 </head>
 <body>
+<p>每周筆記<ul>
+<li><a href="0908" target="_blank">0908標籤簡介一</a></li>
+<li><a href="0915.html" target="_blank">0915標籤簡介二</a></li>
+</ul></p>
+
 </body>
 </html>
