--- a/0915.html
+++ b/0915.html
@@ -4,15 +4,37 @@
 </head>
 <body>
 <!--檔案路徑:絕對路徑 相對路徑
-絕對路徑:
-鄉對路徑: -->
+絕對路徑:檔案在電腦裡的絕對位置 c:/.....
+鄉對路徑:相對於目前檔案的檔案路徑
+ -->
 
 <img src="圖片1.png" width="200px" alt="替代文字" title="標題"><HR>
 <hr>
-    <a href="https://www.fhsh.khc.edu.tw/" target="_blank">外部超連結</a>
+    <a href="https://www.google.com/" target="_blank">外部超連結</a>
 <br>
-    <a id="cat"></a>
+    <a id="cat"></a><!--錨點-->
 <a href="#cat">內部超連結(書籤)</a>
+<a href="0908">內部超連結(網頁)</a>
+<hr>
+<!--
+tr:table row;td:table data-cell
+colspan: span
+
+
+
+
+
+
+
+-->
+
+
+
+<table border="5" cellspacing="0">
+<tr> <td>1</td> <td colspan="2">2-3</td> </tr><!--tr:table row ; td: table data-cell-->
+<tr> <td rowspan="2">4<br>7 <td>5</td> <td>6</td> </tr>
+<tr> <td>7</td> <td>8</td> <td>9</td> </tr>
+</table>
 
 </body>
 </html>
