--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <li><a href="0922.html" 0922-css簡介></a></li>
 <il>0929-放假</il>
 <il>1006-放假</il>
+<li><a href="1013.html" 1013-css漸層></a></li>
 </ul></p>
 
 </body>
