--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <p>每周筆記<ul>
 <li><a href="0908" target="_blank">0908標籤簡介一</a></li>
 <li><a href="0915.html" target="_blank">0915標籤簡介二</a></li>
-<li><a href="0922.html" 0922-css簡介></a></li>
+<li><a href="0922.html" target="_blank">0922-css簡介</a></li>
 <il>0929-放假</il>
 <il>1006-放假</il>
 </ul></p>
