--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <li><a href="0908" target="_blank">0908標籤簡介一</a></li>
 <li><a href="0915.html" target="_blank">0915標籤簡介二</a></li>
 <li><a href="0922.html" target="_blank">0922-css簡介</a></li>
+<li><a href="1013.html" target="_blank">1013-線性漸層</a></li>
 <il>0929-放假</il>
 <il>1006-放假</il>
 </ul></p>
