--- a/1013.html
+++ b/1013.html
@@ -2,6 +2,9 @@
 <head>
 <title>css漸層</title>
 <style>
+    div{
+    margin: 5px;
+}
 #d1{
     height: 100px;
     width: 400px;
@@ -24,7 +27,45 @@ height: 50px;
 width: 400px;
 background: linear-gradient(90deg,red,white 33%,white 66%,blue);
 }
+#d5{
+height: 50px;
+width: 400px;
+background: repeating-radial-gradient(45deg,red 30%,white 33%,red 36%);
+}
+#d6{
+height: 200px;
+width: 200px;
+background: radial-gradient(yellow,white,black);
+}
+#d7{
+height: 200px;
+width: 400px;
+background: radial-gradient(circle,yellow,white 30%,black);
+}
+#d8{
+height: 200px;
+width: 400px;
+background: repeating-radial-gradient(circle,gray 25%,white 30%,gray 35%);
+}
+#d9{
+height: 200px;
+width: 200px;
+background: conic-gradient(red,green,blue,red);
+display: inline-block;
+}
 
+#d10{
+height: 200px;
+width: 200px;
+background: conic-gradient(from 90deg,green,blue,red);
+display: inline-block;
+}
+#d11{
+height: 200px;
+width: 200px;
+background: repeating-conic-gradient(90deg,red 30%,white 35%,red 40%);
+display: inline-block;
+}
 
 </style>
 </head>
@@ -32,5 +73,13 @@ background: linear-gradient(90deg,red,white 33%,white 66%,blue);
     <div id="d1"></div>
     <div id="d2"></div>
     <div id="d3"></div>
+    <div id="d4"></div>
+    <div id="d5"></div>
+    <div id="d6"></div>
+    <div id="d7"></div>
+    <div id="d8"></div>
+    <div id="d9"></div>
+    <div id="d10"></div>
+    <div id="d11"></div>
 </body>
 </html>
