--- a/1020.html
+++ b/1020.html
@@ -85,12 +85,18 @@ div{
 0%{ background: hsl( 360deg,30%,70%);}
 }
 body{
-    animation: k6 1s infinite;
+    animation: k6 9s infinite;
 }
 </style>
 </head>
 <body>
 <div id="a1"></div>
+<div id="a2"></div>
+<div id="a3"></div>
+<div id="a4"></div>
+<div id="a5"></div>
+<div id="a6"></div>
+
 </body>
 </html>
 
