--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <il>0929-放假</il>
 <il>1006-放假</il>
 <li><a href="1013.html" target="_blank">1013-線性漸層</a></li>
-<li><a href="1020.html" target="_blank">1020-漸層與動畫</a></li>
+<li><a href="1020.html" target="_blank">1020-css動畫</a></li>
+<li><a href="1027.html" target="_blank">1027-容器框線</a></li>
+<li><a href="1027hw.html" target="_blank">1027-七巧板</a></li>
+<li><a href="1027b.html" target="_blank">1027-位移及變形</a></li>
+
 </ul></p>
 
 </body>
