漸變字形及陰影

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <li><a href="1013.html" target="_blank">1013-線性漸層</a></li>
 <li><a href="1020.html" target="_blank">1020-css動畫</a></li>
 <li><a href="1027.html" target="_blank">1027-容器框線</a></li>
-<li><a href="1027hw.html" target="_blank">1027-七巧板</a></li>
+<li><a href="1027hw.html" target="_blank">11229許辰俞-七巧板</a></li>
 <li><a href="1027b.html" target="_blank">1027-位移及變形</a></li>
+<li><a href="1103.html" target="_blank">1027-位移及變形</a></li>
 
 </ul></p>
 
