--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <li><a href="1027hw.html" target="_blank">11229許辰俞-七巧板</a></li>
 <li><a href="1027b.html" target="_blank">1027-位移及變形</a></li>
 <li><a href="1103.html" target="_blank">1103-位移及變形</a></li>
-<li><a href="1110.html" target="_blank">1110-js簡介</a></li>
+<li><a href="1110.html" target="_blank">1110-js輸出與輸入</a></li>
 </ul></p>
 
 </body>
