--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <li><a href="1103.html" target="_blank">1103-位移及變形</a></li>
 <li><a href="1110.html" target="_blank">1110-js輸出與輸入</a></li>
 <li><a href="1117.html" target="_blank">1117-計時器與亂數</a></li>
+<li><a href="1201.html" target="_blank">1201-翻牌記憶遊戲</a></li>
 </ul></p>
 
 </body>
