--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <li><a href="1110.html" target="_blank">1110-js輸出與輸入</a></li>
 <li><a href="1117.html" target="_blank">1117-計時器與亂數</a></li>
 <li><a href="1201.html" target="_blank">1201-翻牌記憶遊戲</a></li>
+<li><a href="1208.html" target="_blank">1208-人物移動</a></li>
 </ul></p>
 
 </body>
