--- a/1208.html
+++ b/1208.html
@@ -5,7 +5,7 @@
             #map{
                 width: 800px;
                 height: 800px;
-                background: url("grass.jpg");
+                background: url("pic/grass.jpg");
                 background-size: 30%;
                 /*background-repeat: repeat;*/
                 animation: bg_move 3s linear infinite;
@@ -19,7 +19,7 @@
             #role{
                 width: 48px;
                 height: 72px;
-                background-image: url("sprite.png");
+                background-image: url("pic/sprite.png");
                 border: 1px solid red;
                 background-position: -144px -432px;
                 animation: walking 0.7s steps(3) infinite;
