--- a/1215.html
+++ b/1215.html
@@ -52,7 +52,9 @@
             ship.style.left=ship.posX+"px";
             ship.style.top=ship.posY+"px";
             ship.move=setInterval(ship_move,5);
-
+            game_score=0;
+            game_time=0;
+            
             game_t1=setInterval(ufo_create,1000);
            }
            function mykeydown(){
@@ -130,5 +132,6 @@
             <!--img src="pic/ship.png" width="40px"-->
             
         </div>
+        <button id="restart" onclick=""
     </body>
 </html>
