--- a/1215.html
+++ b/1215.html
@@ -1,49 +1,43 @@
+
 <html>
-    <head>
-        <title>1215-宇宙射擊遊戲</title>
-        <style>
-            #spaces{
-                width: 800px;
-                height: 800px;
-                background: url("pic/bg_stars.jpg");
-                animation: bg_move 2s linear infinite;
-            }
-            @keyframes bg_move {
-                0%{background-position-y: 0px;}
-                100%{background-position-y: 216px;}
-            }
-            #ship{
-                width: 40px;
-                height: 60px;
-                background: url("pic/ship.png");
-                background-size: 40px 60px;
-                position: absolute;
-            }
-            .ufo{
-                width: 60px;
-                height: 40px;
-                background: url("pic/ufo.png");
-                background-size: 60px 40px;
-                position: absolute;
-            }
-            .bullet{
-                width: 40px;
-                height: 6px;
-                background-color: red;
-                position: absolute;
-            }
-        </style>
-        <script>
-        function ship_move(){
-            if(ship.posX > 0 && dir["ArrowRight"]){
-                ship.posX--;
-            }else if(ship.posX + ship.w < spaces.w && dir["ArrowRight"]){
-                ship.posX++;
-            }
-            ship.style.left=ship.posX+"px";
+<head>
+    <title>1215-宇宙射擊遊戲</title>
+    <style>
+        #spaces {
+            width:800px;
+            height:800px;
+            background:url("pic/bg_stars.jpg");
+            animation: bg_move 2s linear infinite;
+            position: relative;
         }
-        function game_init(){
-            spaces={w:800,h:800};//自定義一個物件
+        @keyframes bg_move {
+            0% {background-position-y: 0px;}
+            100% {background-position-y: 216px;}
+        }
+        #ship {
+            width: 40px;
+            height: 60px;
+            background: url("pic/ship.png");
+            background-size: 40px 60px;
+            position: absolute;
+        }
+        .ufo {
+            width: 60px;
+            height: 40px;
+            position: absolute;
+        }
+        .bullet {
+            width: 4px;
+            height: 6px;
+            background-color: red;
+            position: absolute;
+        }
+    </style>
+    <script>
+        function game_init() {
+            show_ranking();
+            dir={"ArrowLeft":0,"ArrowRight":0,"ArrowUp":0,"ArrowDown":0}
+            spaces={w:800,h:800}; //自定義一個物件
             ship=document.getElementById("ship");
             ship.w=40;
             ship.h=60;
@@ -53,44 +47,82 @@
             ship.style.top=ship.posY+"px";
             ship.move=setInterval(ship_move,5);
             game_score=0;
+            document.getElementById("score").innerHTML=game_score;
             game_time=0;
-            
-            game_t1=setInterval(ufo_create,1000);
-           }
-           function mykeydown(){
+            document.getElementById("game_time").innerHTML=game_time;
+            game_timer=setInterval(function(){
+                game_time++;
+                document.getElementById("game_time").innerHTML=game_time;
+            },1000);
+            Array.from(document.getElementsByClassName("ufo")).forEach((u)=>{
+                u.remove();
+            });
+            ufo_creater=setInterval(ufo_create,1000);
+            game_starting=true;
+            document.getElementById("restart").style.display="none";
+        }
+        function game_over() {
+            game_starting=false;
+            clearInterval(ship.move);
+            clearInterval(ufo_creater);
+            clearInterval(game_timer);
+            document.getElementById("spaces").style.animationPlayState="paused";
+            Array.from(document.getElementsByClassName("ufo")).forEach((u)=>{
+                clearInterval(u.move);
+            });
+            Array.from(document.getElementsByClassName("bullet")).forEach((b)=>{
+                clearInterval(b.move);
+                b.remove();
+            });
+            document.getElementById("restart").style.display="block";
+            do_ranking();
+        }
+        function mykeydown() {
             event.preventDefault();
-            if(event.key == " "){
+            if(event.key == " ") {
                 shoot();
-            }else if(Object.keys(dir).includes(event.key)){
-            dir[event.key]=1;
-           }
+            } else if(Object.keys(dir).includes(event.key)) {
+            //} else if(event.key == "ArrorLeft" || event.key == "ArrowRight") {
+                dir[event.key]=1;
+            }
         }
-           function mykeydown(){
-             event.preventDefault();
-             if(Object.keys(dir).includes(event.key)){
-             dir[event.key]=0;
-           }
+        function mykeyup() {
+            event.preventDefault();
+            if(Object.keys(dir).includes(event.key)) {
+                dir[event.key]=0;
+            }
         }
-           function getRand(min,max){
-            return Math.floor(Math.random()*(max-min+1))+min;
-           }
-           function ufo_move(){
-            if(ufo.posY + ufo.h > spaces.h){
+        function getRand(min,max) {
+            return Math.floor(Math.random() * (max-min+1)) + min;
+        }
+
+        function ship_move() {
+            if(ship.posX > 0 && dir["ArrowLeft"]) {
+                ship.posX--;
+            } else if(ship.posX + ship.w < spaces.w && dir["ArrowRight"]) {
+                ship.posX++;
+            }
+            ship.style.left=ship.posX+"px";
+        }
+
+        function ufo_move(ufo) {
+            if(ufo.posY + ufo.h > spaces.h) {
                 clearInterval(ufo.move);
                 ufo.remove();
+                game_over();
                 return;
             }
-                ufo.posY++;
-                ufo.posX+= getRand(-2,2);
-            if(ufo.posX<0){
+            ufo.posY++;
+            ufo.posX += getRand(-2,2);
+            if(ufo.posX < 0) {
                 ufo.posX=0;
-            }else if(ufo.posX + ufo.w > spaces.w){
-                ufo.posX=spaces.w-ufo.w;
+            } else if(ufo.posX+ufo.w > spaces.w) {
+                ufo.posX = spaces.w-ufo.w;
             }
             ufo.style.left=ufo.posX+"px";
             ufo.style.top=ufo.posY+"px";
-           }
-          function ufo_create(){
+        }
+        function ufo_create() {
             var u=document.createElement("img");
             u.src="pic/ufo.png";
             u.className="ufo";
@@ -101,18 +133,34 @@
             document.getElementById("spaces").appendChild(u);
             u.style.left=u.posX+"px";
             u.style.top=u.posY+"px";
-            u.move=setInterval(ufo_move,100,u);
-           }
-           function bullet_move(bt){
-            if(bt.posY<0){
+            u.move=setInterval(ufo_move,20,u);
+        }
+
+        function bullet_move(bt) {
+            if(bt.posY < 0) {
                 clearInterval(bt.move);
                 bt.remove();
                 return;
             }
             bt.posY--;
             bt.style.top=bt.posY+"px";
-           }
-           function shoot(){
+
+            var hit_ufo = Array.from(document.getElementsByClassName("ufo")).filter((u)=>{
+                return (u.posX <= bt.posX) && (u.posX + u.w >= bt.posX + bt.w) && (u.posY + u.h >= bt.posY);
+            });
+            if(hit_ufo.length > 0) {
+                hit_ufo.forEach((u)=>{
+                    clearInterval(u.move);
+                    u.remove();
+                });
+                clearInterval(bt.move);
+                bt.remove();
+                game_score++;
+                document.getElementById("score").innerHTML=game_score;
+            }
+        }
+        function shoot() {
+            if(game_starting==false) return;
             var b=document.createElement("div");
             b.className="bullet";
             b.w=4;
@@ -120,18 +168,61 @@
             b.posX=ship.posX+(ship.w-b.w)/2;
             b.posY=ship.posY-b.h;
             document.getElementById("spaces").appendChild(b);
-            b.style.left=u.posX+"px";
-            b.style.top=u.posY+"px";
+            b.style.left=b.posX+"px";
+            b.style.top=b.posY+"px";
             b.move=setInterval(bullet_move,10,b);
-           }
-        </script>
-    </head>
-    <body onload="game_init()" onkeydown="mykeydown()" onkeyup="mykeyup()">
+        }
+
+        function show_ranking() {
+            var ranking=sessionStorage.getItem("ranking");
+            if(ranking) {
+                document.getElementById("ranking").innerHTML="";
+                var data=Array.from(JSON.parse(ranking));
+                data.forEach((x)=>{
+                    var li=document.createElement("li");
+                    li.innerHTML=`<span style="width:150px">${x.name}</span> <span>用${x.time}秒</span> <span>得${x.score}分</span>`;
+                    document.getElementById("ranking").appendChild(li);
+                });
+            }
+        }
+        function do_ranking() {
+            var ranking=sessionStorage.getItem("ranking");
+            if(ranking==null) {
+                ranking=[];
+                ranking.push({"name":prompt("請輸入你的名稱："),"score":game_score,"time":game_time});
+                sessionStorage.setItem("ranking",JSON.stringify(ranking));
+            } else {
+                var data=Array.from(JSON.parse(ranking));
+                if(data.length<5) {
+                    data.push({"name":prompt("請輸入你的名稱："),"score":game_score,"time":game_time});
+                } else if(game_score > data[4].score) {
+                    data.pop();
+                    data.push({"name":prompt("請輸入你的名稱："),"score":game_score,"time":game_time});
+                }
+                data.sort((a,b)=>{
+                    return b.score-a.score;
+                });
+                sessionStorage.setItem("ranking",JSON.stringify(data));
+            }
+            show_ranking();
+        }
+    </script>
+</head>
+<body onload="game_init()" onkeydown="mykeydown()" onkeyup="mykeyup()">
+    <div style="display:inline-block; width:800px;">
+        <div id="status">
+            <span>得分：<span id="score">0</span> 分</span>
+            <span style="float:right;">時間：<span id="game_time">0</span> 秒</span>
+        </div>
         <div id="spaces">
             <div id="ship"></div>
             <!--img src="pic/ship.png" width="40px"-->
-            
         </div>
-        <button id="restart" onclick=""
-    </body>
+        <button id="restart" onclick="game_init();">重新開始</button>
+    </div>
+    <div style="display:inline-block; height:820px; vertical-align:bottom; margin-left:10px;">
+        <div style="font-size:2em; font-weight:bolder;">排行榜</div>
+        <ol id="ranking"></ol>
+    </div>
+</body>
 </html>
