--- a/final.html
+++ b/final.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
                 
-    <body style="text-align: center;margin-top: 100px;">/*文字置中text-align: center;   上面留100的空白margin-top: 100px
+    <body style="text-align: center;margin-top: 100px;">
         <h1>30 秒點擊</h1>
-        <p>分數:<span id="score">0</span></p>/*score變數名字
+        <p>分數:<span id="score">0</span></p>
         <p>時間:<span id="time">30</span></p>
         <button id="btn">點我</button>
 
